--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
-sudo: false
+git:
+  depth: false
+  submodules: false
+branches:
+  only:
+    - master
 language: ruby
 rvm:
   - 2.3.0
-before_install: gem install bundler -v 1.14.6
+install:
+  - bundle install --jobs=3 --retry=3
+script:
+  - bundle exec rspec
